[package]
name = "Exercism-Rust"
version = "0.1.0"
edition = "2018"

[lib]
name = "hello_world"
path = "src/easy/hello-world/src/lib.rs"

[workspace]
members = [
    "src/easy/hello-world",
    "src/easy/leap"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
