[package]
name = "Exercism-Rust"
version = "0.1.0"
edition = "2018"

[lib]
name = "hello_world"
path = "src/easy/hello-world/src/lib.rs"

[workspace]
members = [
    "src/easy/hello-world",
    "src/easy/leap",
    "src/easy/raindrops",
    "src/easy/nth-prime",
    "src/easy/beer-song",
    "src/easy/proverb",
    "src/easy/reverse-string",
    "src/easy/difference-of-squares",
    "src/easy/sum-of-multiples"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
